--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: aqi-api
+    name: tensorflow-api
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    envVars:
-      - key: PORT
-        value: 10000
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    env: python
+    plan: free
+    environment:
+      pythonVersion: 3.10.13
+
