--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,7 @@ services:
   - type: web
     name: tensorflow-api
     runtime: python
+    pythonVersion: "3.10.13"  # Explicitly set Python 3.10
     buildCommand: "pip install -r requirements.txt"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
-    env: python
     plan: free
-    environment:
-      - key: PYTHON_VERSION
-        value: 3.11.9
