--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
-    name: tensorflow-api
+    name: aqi-api
     runtime: python
-    pythonVersion: "3.10.13"  # Explicitly set Python 3.10
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
-    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    envVars:
+      - key: PORT
+        value: 10000
